Bug 104818 - Alias uno commands shows wrong label when a11y enabled
Summary: Alias uno commands shows wrong label when a11y enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Windows (All)
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.4.0 target:5.3.0.1 target:5.2.5
Keywords:
Depends on:
Blocks: Main-Menu a11y, Accessibility SD-Shared-Code
  Show dependency treegraph
 
Reported: 2016-12-20 18:30 UTC by am_dxer
Modified: 2017-05-02 16:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description am_dxer 2016-12-20 18:30:55 UTC
Description:
Screen readers read the 14th item in the View menu as Show. Users do not know what will be shown when this is checked.

Steps to Reproduce:
1. Press Alt+V for the view menu.
2. Press the Down arrow 13 times.


Actual Results:  
Screen reader say Show.

Expected Results:
Text exposed to assistive technologies should be more descriptive about what this menu item activates.


Reproducible: Always

User Profile Reset: Yes

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:50.0) Gecko/20100101 Firefox/50.0
Comment 1 V Stuart Foote 2016-12-20 19:26:52 UTC
Confirmed. On Windows 8.1 Ent 64-bit en-US with

Version: 5.3.0.0.beta2 (x64)
Build ID: a7e30712ad6d8bc9286007b37aa581983e0caba3
CPU Threads: 8; OS Version: Windows 6.29; UI Render: default; Layout Engine: new; 
Locale: en-US (en_US); Calc: CL

and local help installed (but extended tooltips not enabled).

The ~Show command shows on the Edit -> Tracked Changes, but also now shows out of context on the View menu. Either case, the ~Show button is all that sounds. 
 
@Jay, you added the tool-tips to WriterCommands.xcu but do those even show for main menu elements?

=-ref-=

https://cgit.freedesktop.org/libreoffice/core/commit/?id=37ad8daabf596e039b4ca62e06e91d5a83128b7c
Comment 2 Maxim Monastirsky 2016-12-20 23:22:29 UTC
It shows the correct label after disabling a11y (Tools > Options... > LibreOffice > a11y > Support assistive technology tools). Looks like a bug in the command links implementation (Bug 84258). I'll take a look.
Comment 3 Commit Notification 2016-12-21 23:09:58 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c9303b98ad69213fe346d0657a8bca5ac8fa3bd7

tdf#104818 Show the right label when a11y enabled

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Maxim Monastirsky 2016-12-21 23:12:43 UTC
Will also backport to stable branches.
Comment 5 Commit Notification 2016-12-23 11:21:30 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=81202718487f716e002c5f5bd87ab5e3ed30615d&h=libreoffice-5-3

tdf#104818 Show the right label when a11y enabled

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2017-01-01 17:42:39 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0690b64efac12eba37af78e66f8fff5e24c91c96&h=libreoffice-5-2

tdf#104818 Show the right label when a11y enabled

It will be available in 5.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.