tdf#104818 Show the right label when a11y enabled

Change-Id: If4da5b9435e96e3830bac3d01e06f7ddc87754eb